2001-07-17  Tom Tromey  <tromey@redhat.com>

	* lib/ylwrap: Added special exception.
	* lib/py-compile: Added license.
	* lib/mdate-sh: Added special exception.
	* lib/elisp-comp: Added special exception.
	* lib/compile: Added special exception.
	* lib/depcomp: Added special exception.

	Report from Motoyuki Kasahara:
	* tests/make.test: Use am__include.
	* tests/exsource.test: Use am__include.
	* m4/make.m4 (AM_MAKE_INCLUDE): Use am__include and am__quote.
	* automake.in (handle_languages): Use am__include and am__quote.

	* m4/depend.m4 (AM_DEPENDENCIES): Renamed to _AM_DEPENDENCIES.
	* m4/init.m4: Updated callers.

2001-06-10  Tim Mooney  <mooney@dogbert.cc.ndsu.NoDak.edu>

	* aclocal.in (parse_arguments, write_aclocal): Update Copyrights.
	* aclocal.in (scan_configure, add_file): Handle the full macro
	name even if it contains numbers, such as I18N.

2001-07-16  Tom Tromey  <tromey@redhat.com>

	* automake.texi (Dependencies): Link to dependency tracking page.
	(Data): Mention dist_.
	(Clean): Mention clean heuristics.
	(Install): Mention nobase_.

	* automake.texi (Program and Library Variables): Document _LINK.

2001-07-16  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (handle_libraries): Allow libraries to lie in
	a subdirectory by constraining only the basename to start
	with 'lib', not the whole path.

2001-07-16  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/subobj8.test: New file.
	* tests/Makefile.am (XFAIL_TESTS, TESTS): Add subobj8.test.

2001-07-16  Tom Tromey  <tromey@redhat.com>

	Fix for PR automake/212:
	* lib/am/lisp.am (install-%DIR%LISP): Added missing `\'.
	(uninstall-%DIR%LISP): Likewise.

2001-07-15  Tom Tromey  <tromey@redhat.com>

	* automake.in (usage): Rewrote code to handle columnization.
	From Alexey Mahotkin and Maxim Sinev.

	Report from Ralf Corsepius:
	* automake.in (TARGET_PATTERN): Add `+' as valid character.
	(SUFFIX_RULE_PATTERN): Likewise.
	* tests/Makefile.am (TESTS): Added cxx.test.