@@ -1,0 +1,93 @@
+#! /bin/sh
+
+# Test to make sure we can compile when the compiler doesn't
+# understand `-c -o'.
+
+. $srcdir/defs || exit 1
+
+cat > configure.1 << 'END'
+AC_INIT(a.c)
+AM_INIT_AUTOMAKE(nonesuch, 0.23)
+AC_PROG_CC
+AM_PROG_CC_C_O
+AC_OUTPUT(Makefile)
+END
+
+# This is just like the first one but we reverse the order of
+# the PROG_CC macros.  Really these should be equivalent,
+# since AC_PROG_CC_C_O should probably require AC_PROG_CC.
+# (Investigation might show that we should just remove this test.)
+cat > configure.2 << 'END'
+AC_INIT(a.c)
+AM_INIT_AUTOMAKE(nonesuch, 0.23)
+AM_PROG_CC_C_O
+AC_PROG_CC
+AC_OUTPUT(Makefile)
+END
+
+# This one makes sure that $CC can be used after AM_PROG_CC_C_O.
+cat > configure.3 << 'END'
+AC_INIT(a.c)
+AM_INIT_AUTOMAKE(nonesuch, 0.23)
+AC_PROG_CC
+AM_PROG_CC_C_O
+$CC -v > Hi 2>&1 || exit 1
+AC_OUTPUT(Makefile)
+END
+
+cat > Makefile.am << 'END'
+bin_PROGRAMS = wish
+wish_SOURCES = a.c
+# Make sure we need something strange.
+wish_CFLAGS = -g
+END
+
+cat > a.c << 'END'
+#include <stdio.h>
+
+int main ()
+{
+   printf ("hi\n");
+}
+END
+
+$needs_autoconf
+gcc -v || exit 77
+
+cat > Mycomp << 'END'
+#!/bin/sh
+
+case "$@" in
+ *-c*-o* | *-o*-c*)
+    exit 1
+    ;;
+esac
+
+exec gcc ${1+"$@"}
+END
+
+chmod +x Mycomp
+
+set -e
+
+
+for conf in configure.1 configure.2 configure.3; do
+   cp $conf configure.in
+
+   $ACLOCAL
+   $AUTOCONF
+   $AUTOMAKE --copy --add-missing
+
+   rm -rf build
+   mkdir build
+   cd build
+
+   # Make sure the compiler doesn't understand `-c -o'
+   CC=`pwd`/../Mycomp
+   export CC
+
+   ../configure
+   $MAKE
+
+   cd ..
+done
