@@ -1,3 +1,9 @@
+2001-07-18  Tom Tromey  <tromey@redhat.com>
+
+	* tests/Makefile.am (TESTS): Added ccnoco.test.
+	(XFAIL_TESTS): Likewise.
+	* tests/ccnoco.test: New file.
+
 2001-07-17  Tom Tromey  <tromey@redhat.com>
 
 	* lib/ylwrap: Added special exception.
